--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>The Digital Desert</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Texturina:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
